# ZLG_USBCAN_2E_U

./: .gitignore  CMakeLists.txt  slint_quick.md
Global/include/: Global.h
SlintWindow/include/: SlintWindow.h
SlintWindow/src/: SlintWindow.cpp
components/: CMakeLists.txt
components/USBCAN-2E/: CMakeLists.txt
components/USBCAN-2E/Lib/USBCAN_E_U/: config.h  zlgcan.h  zlgcan.lib
components/USBCAN-2E/include/: USB_CAN_2E_U.h
components/USBCAN-2E/src/: USB_CAN_2E_U.cpp
src/: main.cpp  main.h
ui/: app-window.slint
